compiler/testData/diagnostics/tests/cast/bare/UnrelatedColon.kt
trait Tr
trait G<T>

fun test(tr: Tr) = tr: <!WRONG_NUMBER_OF_TYPE_ARGUMENTS!>G<!>